# insy7970-sensor-data

./: .coverage  .env.example  .gitignore  README.md  SPEC.md  main.py  pyproject.toml
docs/: CLI.md  GRAND_DESIGN.md  MOCK_DATA_CONTRACT.md
docs/sprints/: 0.0.0-foundation.md  0.1.0-mock-waites-ingestion.md  0.2.0-snapshots-and-trends.md  0.2.1-multi-day-mock-trends.md  0.2.2-live-waites-canary.md  0.2.3-live-shape-validation.md  0.2.4-raw-evidence-lifecycle.md  0.2.5-sqlite-observation-store.md  0.3.0-clustering.md  0.4.0-api-and-static-web.md  0.5.0-maximo-integration.md  README.md
src/insy_sensor_data/: __init__.py  artifacts.py  cli.py  config.py  health.py  joins.py  raw_lifecycle.py  storage.py
src/insy_sensor_data/api/: main.py
src/insy_sensor_data/api/routes/: dates.py  health.py  snapshots.py  trends.py  waites.py
src/insy_sensor_data/api/static/: app.js  index.html  (+1 more)
src/insy_sensor_data/clustering/: __init__.py
src/insy_sensor_data/maximo/: __init__.py
src/insy_sensor_data/snapshots/: __init__.py  build.py  trends.py
src/insy_sensor_data/waites/: __init__.py  client.py  fetch.py  fixtures.py  validate.py
tests/: test_api.py  test_cli.py  test_config.py  test_live_waites_canary.py  test_raw_lifecycle.py  test_snapshots.py  test_storage.py  test_trends.py  test_waites_client.py  test_waites_fetch.py  test_waites_fixtures.py  test_waites_validate.py
tests/fixtures/maximo/: workorders.json
tests/fixtures/waites/: action-items.json  equipment.json  installation-points.json  readings-impact-vue.json  readings-rms.json  readings-temperature.json
