[project]
name = "insy7970-sensor-data"
version = "0.2.0"
description = "Lightweight vibration monitoring service for Waites sensor data and Maximo maintenance history."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "typer>=0.16,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.scripts]
sensor-data = "insy_sensor_data.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insy_sensor_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
